<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_location"
        android:backgroundTint="@color/black" />

    <TextView
        android:id="@+id/tvEventAddres"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/scrollView2"
        app:layout_constraintBottom_toTopOf="@+id/btnUpdateEvent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etEventDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/write_here_description_of_your_event_try_to_include_as_much_usefull_inforamtiosn_as_you_can" />
        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        app:layout_constraintGuide_percent="0.45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/tvTags"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clAddDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="TAGS:"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <HorizontalScrollView
        android:id="@+id/scrollViewTags"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTags"
        android:layout_width="0dp"
        android:layout_height="50dp">

        <LinearLayout
            android:id="@+id/llTags"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" />
    </HorizontalScrollView>

    <ImageView
        android:id="@+id/ivAddTag"
        app:layout_constraintBottom_toBottomOf="@+id/tvTags"
        app:layout_constraintStart_toEndOf="@+id/tvTags"
        app:layout_constraintTop_toTopOf="@+id/tvTags"
        app:srcCompat="@drawable/ic_add_tag"
        app:tint="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:src="@drawable/ic_add_tag" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clAddEventIcon"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clAddEventImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true">

        <TextView
            android:id="@+id/tvAddEventIcon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivAddEventIcon"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:focusable="false"
            android:text="@string/event_icon"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivAddEventIcon"
            app:layout_constraintBottom_toBottomOf="@+id/tvAddEventIcon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvAddEventIcon"
            app:srcCompat="@drawable/ic_add_tag"
            app:tint="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:focusable="false"
            android:src="@drawable/ic_add_tag" />

        <TextView
            android:id="@+id/tvEventIconAdded"
            app:layout_constraintBottom_toBottomOf="@+id/tvAddEventIcon"
            app:layout_constraintStart_toEndOf="@+id/tvAddEventIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="2dp"
            android:focusable="false"
            android:text="@string/attached_event_icon"
            android:textSize="12sp"
            android:visibility="invisible" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clAddEventImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollViewTags"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true">

        <TextView
            android:id="@+id/tvAddEventImage"
            app:layout_constraintBottom_toBottomOf="@+id/ivAddEventImage"
            app:layout_constraintStart_toEndOf="@+id/ivAddEventImage"
            app:layout_constraintTop_toTopOf="@+id/ivAddEventImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:clickable="false"
            android:focusable="false"
            android:text="Event image"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivAddEventImage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_add_tag"
            app:tint="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:clickable="false"
            android:focusable="false"
            android:src="@drawable/ic_add_tag" />

        <TextView
            android:id="@+id/tvEventImageAdded"
            app:layout_constraintBottom_toBottomOf="@+id/tvAddEventImage"
            app:layout_constraintStart_toEndOf="@+id/tvAddEventImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="2dp"
            android:clickable="false"
            android:focusable="false"
            android:text="@string/attached_event_image"
            android:textSize="12sp"
            android:visibility="invisible" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnUpdateEvent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/update_event"
        app:backgroundTint="@color/primary_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/pbCreateEvent"
        style="?android:attr/progressBarStyle"
        app:layout_constraintBottom_toBottomOf="@+id/btnUpdateEvent"
        app:layout_constraintEnd_toEndOf="@+id/btnUpdateEvent"
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintStart_toStartOf="@+id/btnUpdateEvent"
        app:layout_constraintTop_toTopOf="@+id/btnUpdateEvent"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:elevation="2dp"
        android:visibility="invisible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clAddDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.846"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEventAddres"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:id="@+id/tvEventDay"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivEventDay"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:clickable="false"
            android:focusable="false"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivEventDay"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            android:src="@drawable/ic_event_date" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

